--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <a href="https://jogo-de-dados-tan.vercel.app/" target="_blank"><img class="d-block w-100" src="images/dados.png" alt=""></a>
       </div>
       <div class="carousel-item">
-        <a href="//www.google.com" target="_blank"><img class="d-block w-100" src="images/Em brev.jpg" alt="Terceiro Slide"></a> 
+        <a href="https://github.com/gustapine" target="_blank"><img class="d-block w-100" src="images/Em brev.jpg" alt="Terceiro Slide"></a> 
       </div>
       
     </div>
