--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 
 <section id="title">
-    <div class="container-fluid1 Home">
+    <div id="home" class="container-fluid1 Home">
       <!--Capa--> 
         <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand title " href="#">GD</a>
@@ -39,7 +39,7 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                  <a class="nav-link"  href="#Home">Home</a>
+                  <a class="nav-link"  href="#home">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#trabalhos">Trabalhos</a>
@@ -63,10 +63,10 @@
         </div>
     </div>
     <!---------->
-    <div class="container-fluid2">
+    <div id="trabalhos" class="container-fluid2">
       <!--2 bloco-->
       <div class="container text-center">
-        <div  id="trabalhos" class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col  primeiro">
               <a href="https://kitbateria.vercel.app/" target="_blank"> 
                 <div class="card h-100">
@@ -94,7 +94,7 @@
             </a>
           </div>
           <div class="col  terceiro">
-            <a href="#Home">
+            <a href="#home">
               <div class="card h-100">
                 <img src="images/Em brev.jpg" class="card-img-top" alt="Em breve">
                 <div class="card-body">
@@ -108,10 +108,10 @@
       </div>
     </div>
     
-    <div class="container-fluid1 Home">
+    <div id="Embreve" class="container-fluid1 Home">
       <!--3 bloco-->
-      <div id="Embreve">
-          <h2>EM BREVE, ando sem tempo, volte pra <a href="#Home">casa</a>...</h2>
+      <div >
+          <h2>EM BREVE, ando sem tempo, volte pra <a href="#home">casa</a>...</h2>
       </div>
       <!----------->
     </div>
@@ -146,7 +146,7 @@
   </button>
 </div> -->
 </body>
-</html
+</html>
 
 
 
