--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" >
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/game.css">
     <script src="https://kit.fontawesome.com/28beedde55.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -55,10 +56,10 @@
             <h1>Eu me chamo Gustavo </h1>    
             <h6>um entusiasta de programação</h6>
             <a href="https://www.linkedin.com/in/gustavo-dias-218a38220/" target="_blank"> <button class="btn btn-dark btn-lg" type="button"><i class="fa-brands fa-linkedin-in"></i> LinkedIn</button></a>
-            <a href="https://github.com/gustapine" target="_blank"><button class="btn btn-outline-light btn-lg" type="button"><i class="fa-brands fa-github"></i> GitHub</button></a>
+            <a href="https://github.com/gustapine" target="_blank"><button class="btn btn-outline-light btn-lg b2" type="button"><i class="fa-brands fa-github"></i> GitHub</button></a>
           </div>
-          <div class="col-lg-6">
-              <img class="globo imgG" src=images/globo.png alt="TERRA">
+          <div class="col-lg-6 popup">
+              <img   class="globo imgG" src=images/globo.png alt="TERRA">
           </div>
         </div>
     </div>
@@ -71,7 +72,7 @@
               <a href="https://kitbateria.vercel.app/" target="_blank"> 
                 <div class="card h-100">
                   <img src="images/kitbateria.png" class="card-img-top primeiro" alt="kitbateria">
-                  <div class="card-body primeiro">
+                  <div class="card-body text-bg-dark">
                     <h5 class="card-title">Kit Bateria</h5>
                     <p class="card-text">
                       Este foi o primeiro jogo feito para praticar os meus conhecimentos sobre Javascript. 
@@ -85,7 +86,7 @@
             <a href="https://jogo-de-dados-tan.vercel.app/" target="_blank">
               <div class="card h-100">
                 <img src="images/dados.png" class="card-img-top" alt="Dados">
-                <div class="card-body">
+                <div class="card-body text-bg-dark bg-dark">
                   <h5 class="card-title">Jogo de Dados</h5>
                   <p class="card-text">Este foi o meu segundo jogo feito para praticar os meus conhecimentos sobre Javascript. 
                     Basicamente, quem tirar o maior número em um dos dados, ganha.</p>
@@ -97,7 +98,7 @@
             <a href="#home">
               <div class="card h-100">
                 <img src="images/Em brev.jpg" class="card-img-top" alt="Em breve">
-                <div class="card-body">
+                <div class="card-body text-bg-dark">
                   <h5 class="card-title">Em breve</h5>
                   <p class="card-text">Desenvolvendo novos projetos que logo estarão ao ar.</p>
                 </div>
@@ -110,8 +111,13 @@
     
     <div id="Embreve" class="container-fluid1 Home">
       <!--3 bloco-->
-      <div >
-          <h2>EM BREVE, ando sem tempo, volte pra <a href="#home">casa</a>...</h2>
+      <div class="gameTitle">
+
+        <img src="images/running mario.gif" alt="">
+          <H1>Um quiz sobre a minha vida!</H1>
+      </div>
+      <div class="bame">
+      <button type="button" class="btn btn-primary btn-lg bGame">Jogar </button>
       </div>
       <!----------->
     </div>
@@ -145,8 +151,6 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div> -->
+<script src="index.js"></script>
 </body>
-</html>
-
-
-
+</html
