--- a/index.html
+++ b/index.html
@@ -127,6 +127,8 @@
 </section>
     
 <script src="index.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2571304830105042"
+     crossorigin="anonymous"></script>
 </body>
 </html
 
