--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     
     <div id="Embreve" class="container-fluid1 Home">
       <!--3 bloco-->
-      <h5>TAB para jogar</h5>
+      <h5>ESPACE para jogar</h5>
       <div class="game-board">
         <img src="images/press start.gif" class="press" onclick="pulo()">
         <img src="images/mario-gif.gif" class="mario jump">
