--- a/index.html
+++ b/index.html
@@ -9,12 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
-
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope&display=swap" rel="stylesheet">
-    
     <!--Coloca a fonte-->
     <link rel="icon" href="images/eu.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -95,6 +92,17 @@
             </a>
           </div>
           <div class="col  terceiro">
+            <a href="#home">
+              <div class="card h-100">
+                <img src="images/sistemasoperacioanais.png" class="card-img-top" alt="Em breve">
+                <div class="card-body text-bg-dark">
+                  <h5 class="card-title">Sistemas Operacionais</h5>
+                  <p class="card-text">Projeto das matérias de sistemas operacionais e ferramentas web do primeiro semestre da faculdade.</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col  quarto">
             <a href="#home">
               <div class="card h-100">
                 <img src="images/Em brev.jpg" class="card-img-top" alt="Em breve">
