Add card 3 segunda

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
             </a>
           </div>
           <div class="col  terceiro">
-            <a href="#home">
+            <a href="https://sistemasoperacionais.vercel.app/index.html" target="_blank">
               <div class="card h-100">
                 <img src="images/sistemasoperacioanais.png" class="card-img-top" alt="Em breve">
-                <div class="card-body text-bg-dark">
+                <div class="card-body text-bg-dark bg-black">
                   <h5 class="card-title">Sistemas Operacionais</h5>
                   <p class="card-text">Projeto das matérias de sistemas operacionais e ferramentas web do primeiro semestre da faculdade.</p>
                 </div>
