--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <a href="https://kitbateria.vercel.app/" target="_blank"> 
                 <div class="card h-100">
                   <img src="images/kitbateria.png" class="card-img-top primeiro" alt="kitbateria">
-                  <div class="card-body text-bg-dark">
+                  <div class="card-body text-bg-dark bg-black">
                     <h5 class="card-title">Kit Bateria</h5>
                     <p class="card-text">
                       Este foi o primeiro jogo feito para praticar os meus conhecimentos sobre Javascript. 
@@ -83,7 +83,7 @@
             <a href="https://jogo-de-dados-tan.vercel.app/" target="_blank">
               <div class="card h-100">
                 <img src="images/dados.png" class="card-img-top" alt="Dados">
-                <div class="card-body text-bg-dark bg-dark">
+                <div class="card-body text-bg-dark bg-black">
                   <h5 class="card-title">Jogo de Dados</h5>
                   <p class="card-text">Este foi o meu segundo jogo feito para praticar os meus conhecimentos sobre Javascript. 
                     Basicamente, quem tirar o maior número em um dos dados, ganha.</p>
@@ -106,13 +106,14 @@
             <a href="#home">
               <div class="card h-100">
                 <img src="images/Em brev.jpg" class="card-img-top" alt="Em breve">
-                <div class="card-body text-bg-dark">
+                <div class="card-body text-bg-dark bg-black">
                   <h5 class="card-title">Em breve</h5>
                   <p class="card-text">Desenvolvendo novos projetos que logo estarão ao ar.</p>
                 </div>
               </div>
             </a>
           </div>
+        </div>
         </div>
       </div>
     </div>
