--- a/index.html
+++ b/index.html
@@ -103,6 +103,17 @@
             </a>
           </div>
           <div class="col  quarto">
+            <a href="https://github.com/gustapine/blog-node"  target="_blank">
+              <div class="card h-100">
+                <img src="images/blog.png" class="card-img-top" alt="Blog em node">
+                <div class="card-body text-bg-dark bg-black">
+                  <h5 class="card-title">Blog em Node</h5>
+                  <p class="card-text">Blog desenvolvido em Node e EJS. Nele é possível que você escreva seus artigos e os publique em uma página escondida.</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col  quinto">
             <a href="#home">
               <div class="card h-100">
                 <img src="images/Em brev.jpg" class="card-img-top" alt="Em breve">
@@ -113,7 +124,6 @@
               </div>
             </a>
           </div>
-        </div>
         </div>
       </div>
     </div>
