--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
           </nav>
         <div  class="row">
           <div class="col-lg-6 entry">
-            <h1>Eu me chamo Gustavo </h1>    
-            <h6>um entusiasta de programação</h6>
+            <h1>Olá, mundo. Eu me chamo Gustavo</h1>    
+            <h6>Conheça um pouco mais sobre eu e meus projetos neste portfólio.</h6>
             <a href="https://www.linkedin.com/in/gustavo-dias-218a38220/" target="_blank"> <button class="btn btn-dark btn-lg" type="button"><i class="fa-brands fa-linkedin-in"></i> LinkedIn</button></a>
             <a href="https://github.com/gustapine" target="_blank"><button class="btn btn-outline-light btn-lg b2" type="button"><i class="fa-brands fa-github"></i> GitHub</button></a>
           </div>
